--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
 
             function getRiskBadge(level) {
                 const baseClasses = 'px-3 py-1 text-sm font-bold rounded-full text-white';
-                switch (level.toLowerCase()) {
+                const safeLevel = level || 'نامشخص';
+                switch (safeLevel.toLowerCase()) {
                     case 'high':
                     case 'بالا':
                         return `<span class="${baseClasses} bg-red-500">بالا</span>`;
@@ -449,7 +450,7 @@
                     case 'پایین':
                         return `<span class="${baseClasses} bg-green-500">پایین</span>`;
                     default:
-                        return `<span class="${baseClasses} bg-slate-500">${level}</span>`;
+                        return `<span class="${baseClasses} bg-slate-500">${safeLevel}</span>`;
                 }
             }
 
@@ -460,7 +461,7 @@
                 html += `
                     <div class="text-center">
                         <h3 class="text-lg font-bold text-slate-700 mb-2">سطح کلی ریسک سناریو</h3>
-                        ${getRiskBadge(data.overall_risk_level || 'نامشخص')}
+                        ${getRiskBadge(data.overall_risk_level)}
                     </div>
                     <hr/>
                 `;
@@ -472,10 +473,10 @@
                         html += `
                             <div class="bg-white border border-slate-200 rounded-lg p-4">
                                 <div class="flex justify-between items-center mb-2">
-                                    <h4 class="text-lg font-bold text-red-700">${risk.risk_title}</h4>
+                                    <h4 class="text-lg font-bold text-red-700">${risk.risk_title || 'بدون عنوان'}</h4>
                                     ${getRiskBadge(risk.risk_level)}
                                 </div>
-                                <p class="text-slate-600">${risk.risk_description}</p>
+                                <p class="text-slate-600">${risk.risk_description || ''}</p>
                                 ${risk.impact ? `<p class="text-sm text-slate-500 mt-2"><strong>تأثیر احتمالی:</strong> ${risk.impact}</p>` : ''}
                             </div>
                         `;
@@ -490,10 +491,10 @@
                         html += `
                             <div class="bg-white border border-slate-200 rounded-lg p-4">
                                 <div class="flex justify-between items-center mb-2">
-                                    <h4 class="text-lg font-bold text-green-700">${control.control_title}</h4>
+                                    <h4 class="text-lg font-bold text-green-700">${control.control_title || 'بدون عنوان'}</h4>
                                     ${getRiskBadge(control.implementation_priority)}
                                 </div>
-                                <p class="text-slate-600">${control.control_description}</p>
+                                <p class="text-slate-600">${control.control_description || ''}</p>
                             </div>
                         `;
                     });
@@ -681,6 +682,9 @@
                     console.error("Error calling Gemini API:", error);
                     if (error.message && error.message.includes('401')) {
                         return JSON.stringify({ error: "خطا در احراز هویت (401). به نظر می‌رسد کلید API ارائه شده معتبر نیست یا دسترسی لازم را ندارد. لطفاً از صحت کلید API و فعال بودن سرویس اطمینان حاصل کنید." });
+                    }
+                    if (error.message && error.message.includes('503')) {
+                        return JSON.stringify({ error: "مدل هوش مصنوعی در حال حاضر مشغول است و به درخواست‌ها پاسخ نمی‌دهد. لطفاً چند لحظه دیگر دوباره تلاش کنید." });
                     }
                     return JSON.stringify({ error: `خطا در برقراری ارتباط با سرویس هوش مصنوعی: ${error.message}` });
                 } finally {
